--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -6,6 +6,7 @@
     <title>Producto</title>
 </head>
 <body>
+    <h1>Producto</h1>
     <label for="id">Id:</label>
     <input type="number" value="<%= producto.id %>">
     <label for="id">Nombre:</label>
